# sectxt

./: .env.sample  .gitignore  README.md  compose.yml  main.tf
.github/workflows/: cicd.yml
ansible/: Dockerfile  backend.yml  common.yml  deploy.yml  entry.sh  frontend.yml
ansible/templates/: Caddyfile.j2  sectxt-api.service.j2
backend/: Cargo.toml  openapi.json  rustfmt.toml
backend/crates/sectxt-api/: Cargo.toml
backend/crates/sectxt-api/src/: dto.rs  err.rs  handler.rs  main.rs  state.rs  worker.rs
backend/crates/sectxt-core/: Cargo.toml
backend/crates/sectxt-core/src/: attachment.rs  message.rs  repo.rs
backend/crates/sectxt-db/: Cargo.toml
backend/crates/sectxt-db/migrations/: 20260522162508_init.down.sql  20260522162508_init.up.sql
backend/crates/sectxt-db/src/: attachment.rs  lib.rs  message.rs  repo.rs
frontend/: eslint.config.js  index.html  openapi-ts.config.ts  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: AttachmentCard.vue  MessageForm.vue  MessageUrlView.vue  MessageView.vue
frontend/src/composables/: useApi.ts  useClipboard.ts  useCrypto.ts  useNotification.ts
frontend/src/core/: crypto.ts
frontend/src/mappers/: attachment.ts  message.ts
frontend/src/models/: attachment.ts
frontend/src/pages/: [id].vue  index.vue
frontend/src/test/core/: crypto.test.ts
frontend/src/test/mappers/: attachment.test.ts  message.test.ts
terraform/database/: main.tf  outputs.tf  providers.tf
terraform/server/: main.tf  outputs.tf  providers.tf  variables.tf
