[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["e4ac"]
categories = ["web-programming"]
description = "Secret message"
edition = "2024"
keywords = ["cryptography", "messaging"]
license = "GPL-3.0-or-later"
readme = "../README.md"
repository = "https://github.com/e4ac/sectxt"
version = "0.1.0"

[workspace.dependencies]
async-trait = { version = "0.1" }
axum = { version = "0.8" }
bon = { version = "3.9" }
chrono = { features = ["serde"], version = "0.4" }
dotenvy = { version = "0.15" }
serde = { features = ["derive"], version = "1.0" }
serde_with = { features = ["base64"], version = "3.21" }
sqlx = { features = ["chrono", "postgres", "runtime-tokio", "tls-rustls", "uuid"], version = "0.9" }
thiserror = { version = "2.0" }
tokio = { features = ["full"], version = "1.53" }
tower-http = { features = ["compression-full", "cors", "trace"], version = "0.7" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
utoipa = { features = ["axum_extras", "uuid"], version = "5.5" }
utoipa-axum = { version = "0.2" }
utoipa-swagger-ui = { features = ["axum"], version = "9.0" }
uuid = { features = ["serde", "v7"], version = "1.24" }

sectxt-core = { path = "crates/sectxt-core" }
sectxt-db = { path = "crates/sectxt-db" }

[workspace.lints.clippy]
cargo = { level = "warn", priority = 0 }
missing_errors_doc = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
nursery = { level = "warn", priority = 0 }
pedantic = { level = "warn", priority = 0 }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"
