[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "sectxt-api"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
axum = { workspace = true }
dotenvy = { workspace = true }
sectxt-core = { workspace = true }
sectxt-db = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }

[dev-dependencies]
http-body-util = { version = "0.1" }
serde_json = { version = "1.0" }
tower = { features = ["util"], version = "0.5" }

[lints]
workspace = true
