[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "sectxt-db"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
sectxt-core = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
